--- a/style/landing.scss
+++ b/style/landing.scss
@@ -1,50 +1,4 @@
-* {
-  margin: 0px;
-  padding: 0px;
-  font-family: "Helvetica";
-}
-
-ul {
-  list-style: none;
-}
-
-$width: 1000px;
-$padding: 8px;
-
-a {
-  color: #ccc;
-  text-decoration: none;
-  font-size: 12px;
-  text-transform: uppercase;
-  font-weight: bold;
-  
-  &:hover {
-   //text-decoration: underline;
-   color: #333;
-  }
-}
-
-#navigation {
-  width: $width;
-  padding-top: $padding / 2;
-  margin: 0px auto;
-  text-align: right;
-  
-  ul {
-    display: inline;
-    
-    li {
-      display: inline;
-      padding-left: $padding;
-      padding-right: $padding / 2;
-      border-left: 1px dotted #ddd;
-      
-      &.first {
-        border: none;
-      }
-    }
-  }
-}
+@import "base";
 
 #panel {
   clear: both;
@@ -67,7 +21,7 @@ a {
     
     p {
       margin: $padding;
-      color: #333;
+      color: $dark-text;
       letter-spacing: -1px;
     }
     
@@ -77,7 +31,7 @@ a {
         float: left;
         
         a {
-          color: #333;
+          color: $dark-text;
           padding-right: $padding / 2;
         }
       }
@@ -89,7 +43,7 @@ a {
     
     h1 {
       text-align: center;
-      color: #00006E;
+      color: $inovex-blue;
     }
     
     p {
