--- a/_layouts/lob.html
+++ b/_layouts/lob.html
@@ -4,19 +4,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>{{ site.title }} - {{ page.title }}</title>
-    
-    <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
-
-    <meta name="robots" content="index,follow" />
-    <meta name="description" content="" />
-    <meta name="author" content="vincentlandgraf" />
-    <meta name="keywords" content="" />
-    <meta name="date" content="2011-04-03T18:15:32+0200" />
-    <meta http-equiv="Content-language" content="de" />
-    
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    {% include header-meta.html %}
+    <link rel="stylesheet" type="text/css" href="/stylesheets/lob.css" />
   </head>
   <body>
+    {% include top_navigation.html %}
+    <div id="header">
+      
+    </div>
     {{ content }}
   </body>
 </html>
