--- a/style/base.scss
+++ b/style/base.scss
@@ -1,3 +1,5 @@
+@import "widgets";
+
 * {
   margin: 0px;
   padding: 0px;
@@ -18,7 +20,6 @@ a {
   color: $bright-text;
   text-decoration: none;
   font-size: 12px;
-  text-transform: uppercase;
   font-weight: bold;
   
   &:hover {
@@ -40,6 +41,10 @@ a {
       padding-left: $padding;
       padding-right: $padding / 2;
       border-left: 1px dotted #ddd;
+      
+      a {
+        text-transform: uppercase;
+      }
       
       &.first {
         border: none;
