--- a/style/landing.scss
+++ b/style/landing.scss
@@ -44,18 +44,22 @@
     h1 {
       text-align: center;
       color: $inovex-blue;
+      background: url(/images/inovex_logo_square.png) no-repeat;
+      
+      // logo
+      $size: $slice-width * 0.33;
+      width: $size;
+      height: $size;
+      margin-top: $padding * 10;
+      margin-left: ($slice-width - $size) / 2;
+      
+      span {
+        @include readable-hide;
+      }
     }
     
     p {
       text-align: center;
-    }
-    
-    img {
-      $size: $slice-width * 0.33;
-      width: $size;
-      height: $size;
-      margin-top: $padding * 7;
-      margin-left: ($slice-width - $size) / 2;
     }
   }
 }
