--- a/style/base.scss
+++ b/style/base.scss
@@ -15,6 +15,7 @@ $padding: 8px;
 $bright-text: #ccc;
 $dark-text: #333;
 $inovex-blue: #052B69;
+$inovex-logo: "/images/inovex_logo_square.png";
 
 a {
   color: $bright-text;
