--- a/_includes/lob_ad_navigation.html
+++ b/_includes/lob_ad_navigation.html
@@ -1,7 +1,9 @@
 <div id="sub-navigation">
-  <ul>
-    <li><a href="#java" class="scroll-to-anchor">Java</a></li>
-    <li><a href="#dotnet" class="scroll-to-anchor">.NET</a></li>
-    <li class="active"><a href="#ruby" class="scroll-to-anchor">Ruby</a></li>
-  </ul>
+  <div class="boundary">
+    <ul>
+      <li><a href="#java" class="scroll-to-anchor">Java</a></li>
+      <li><a href="#dotnet" class="scroll-to-anchor">.NET</a></li>
+      <li class="active"><a href="#ruby" class="scroll-to-anchor">Ruby</a></li>
+    </ul>
+  </div>
 </div>
