--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/landing.css" />
   </head>
   <body>
-    {% include top_navigation.html %}
+    {% include navigation/top.html %}
     {{ content }}
   </body>
 </html>
