changed split-image on landing page

--- a/style/landing.scss
+++ b/style/landing.scss
@@ -12,7 +12,7 @@
     width: $slice-width;
     min-height: $height;
     float: left;
-    background: url("/images/split.jpg") 0px ($height - 200px)/ 2 no-repeat;
+    background: url("/images/split.png") 0px ($height - 200px)/ 2 no-repeat;
     
     h2 {
       a {
