--- a/style/landing.scss
+++ b/style/landing.scss
@@ -1,5 +1,14 @@
 @import "base";
 
+#top-navigation {
+  ul li a {
+    color: $bright-text;
+    &:hover {
+      color: $inovex-blue;
+    }
+  }
+}
+
 #panel {
   clear: both;
   width: $width;
@@ -16,28 +25,44 @@
     
     h2 {
       a {
-        margin: $padding * 7 $padding $padding * 3 $padding;
+        margin: $padding * 6 $padding $padding * 2.5 $padding;
         font-size: 1em;
-        color: #666;
+        color: $dark-text;
         display: block;
       }
     }
     
     p {
-      margin: $padding;
-      color: $dark-text;
-      letter-spacing: -1px;
+      a {
+        margin: $padding;
+        color: $normal-text;
+        line-height: 1.3em;
+        display: block;
+      }
+    }
+    
+    &:hover {
+      cursor: pointer;
+      h2 a {
+        color: #000;
+      }
+      p a {
+        color: $dark-text;
+      }
     }
     
     ul {
-      margin: $padding;
+      margin: 2.5*$padding $padding $padding $padding;
       li {
         float: left;
         list-style-type: disc;
         margin-left: $padding - 2px;
         list-style-position: inside;
+        font-size: 10px;
+        color: $bright-text;
         
         a {
+          font-size: 14px;
           color: $inovex-blue;
           padding-right: $padding / 2;
           
