--- a/style/base.scss
+++ b/style/base.scss
@@ -13,15 +13,15 @@ ul {
 $width: 1000px;
 $padding: 8px;
 $bright-text: #ccc;
+$normal-text: #777;
 $dark-text: #333;
 $inovex-blue: #052B69;
+$inovex-orange: #F60;
 $inovex-logo: "/images/inovex_logo_square.png";
 
 a {
-  color: $bright-text;
+  color: $normal-text;
   text-decoration: none;
-  font-size: 12px;
-  font-weight: bold;
   
   &:hover {
    color: $inovex-blue;
@@ -44,6 +44,8 @@ a {
       border-left: 1px dotted #ddd;
       
       a {
+        font-size: 12px;
+        font-weight: bold;
         text-transform: uppercase;
       }
       
