--- a/style/lob.scss
+++ b/style/lob.scss
@@ -1,26 +1,65 @@
 @import "base";
 
+body {
+  @include vertical-background-gradient(desaturate(lighten($inovex-blue,70%), 50%),
+                                        desaturate(lighten($inovex-blue, 75%), 50%));
+}
+
 .boundary {
   width: $width;
   margin: 0px auto;
+  p {
+    line-height: 1.4em;
+    margin: $padding;
+  }
+  h2 {
+    margin: $padding;
+    color: $dark-text;
+  }
+  .boxed {
+    margin: $padding;
+    li {
+      margin: 1.5% 1.5%;
+      width: 29%;
+      @include vertical-background-gradient(#fff, #eee);
+      border: 2px solid desaturate(lighten($inovex-blue, 60%), 50%);
+      @include border-radius(10px, 10px, 10px, 10px);
+      float: left;
+      h3 {
+        color: desaturate(lighten($inovex-blue, 40%), 50%);
+        font-size: 40px;
+        text-align: center;
+        height: 200px;
+        line-height: 200px;
+        vertical-align: center;
+      }
+      &:hover {
+        border-color: $inovex-orange;
+        cursor: pointer;
+        h3 {
+          color: $inovex-orange;
+        }
+      }
+    }
+  }
 }
 
 $main-navigation-top: 100px - 22px; // - top navigation
 $main-navigation-height: $padding * 2 + 14px + 1px;
 $sub-navigation-height: 48px;
 $header-height: $main-navigation-top + $main-navigation-height + 
-                $sub-navigation-height + 22px + 1px;
+                $sub-navigation-height + 22px;
 
 #header {
   position: fixed;
-  background: #fff;
   // go to off to render shadow correctly
   width: 102%;
   margin-left: -1%;
   height: $header-height;
-  @include background-gradient(lighten($inovex-blue, 5%), 
-                               darken($inovex-blue, 5%));
-  @include box-shadow(0 0 10px #aaa);
+  @include vertical-background-gradient(darken($inovex-blue, 5%), 
+                                        lighten($inovex-blue, 5%));
+  @include box-shadow(0 0 20px #ccc);
+  border-bottom: 2px solid desaturate(lighten($inovex-blue, 50%), 50%);
 
   #logo {
     position: absolute;
@@ -37,11 +76,17 @@ $header-height: $main-navigation-top + $main-navigation-height +
   }
 
   #top-navigation {
-    // blue won't work so use underline and bright color
-    a:hover {
-      color: $bright-text;
-      text-decoration: underline;
-    };
+    ul li {
+      border-color: desaturate(lighten($inovex-blue, 10%), 50%);
+      a {
+        // blue won't work so use underline and bright color
+        // [TODO] jebi@vila how do you like this -> ... ?
+        color: desaturate(lighten($inovex-blue, 20%), 50%);
+        &:hover {
+          color: $inovex-orange;
+        }
+      }
+    }
   }
 
   #main-navigation {
@@ -56,7 +101,7 @@ $header-height: $main-navigation-top + $main-navigation-height +
     li {
       float: right;
       a {
-        color: $bright-text;
+        color: desaturate(lighten($inovex-blue, 50%), 50%);
         font-size: 12px;
         font-weight: bold;
         padding: $padding $padding*1.5;
@@ -65,8 +110,8 @@ $header-height: $main-navigation-top + $main-navigation-height +
         }
       }
       &.active a {
-        color: #666;
-        @include background-gradient(#ececec, #ddd);
+        color: $dark-text;
+        @include vertical-background-gradient(#ececec, #ddd);
         @include border-radius(5px, 5px, 0, 0);
         border: 1px solid white;
         border-bottom: none;
@@ -82,7 +127,7 @@ $header-height: $main-navigation-top + $main-navigation-height +
     height: $sub-navigation-height;
     margin-top: $main-navigation-top + $main-navigation-height - 1px;
     @include horizontal-navigation;
-    @include background-gradient(#ddd, #fcfcfc);
+    @include vertical-background-gradient(#ddd, #fcfcfc);
     //@include box-shadow(0 -3px 3px white);
     border-top: 1px solid white;
     ul {
@@ -91,17 +136,17 @@ $header-height: $main-navigation-top + $main-navigation-height +
         a {
           font-size: 14px;
           padding: $padding/2 $padding;
-          color: #999;
+          color: $dark-text;
           text-shadow: #fff 1px 1px;
           &:hover {
-            color: #333;
+            color: #000;
           }
-          border: 1px solid transparent;
         }
         &.active a {
+          text-shadow: lighten($inovex-blue, 10%) -1px -1px;
+          color: desaturate(lighten($inovex-blue, 80%), 50%);
           @include border-radius(5px, 5px, 5px, 5px);
-          background: #fff;
-          border: 1px solid $bright-text;
+          @include vertical-background-gradient(desaturate(lighten($inovex-blue, 30%), 40%), desaturate(lighten($inovex-blue, 15%), 40%));
         }
       }
     }
