--- a/style/widgets.scss
+++ b/style/widgets.scss
@@ -11,7 +11,7 @@
   -webkit-border-radius: $lt $rt $lb $rb;
 }
 
-@mixin background-gradient($from, $to) {
+@mixin vertical-background-gradient($from, $to) {
   background: -webkit-gradient(linear, left top, left bottom, from($from), to($to));
 }
 
