fixed landing page

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -5,7 +5,7 @@
   <head>
     <title>{{ site.title }}</title>
     {% include header-meta.html %}
-    <link rel="stylesheet" type="text/css" href="/stylesheets/landing.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/landing.css" />
   </head>
   <body>
     {% include navigation/top.html %}
